--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: projects
+#
+#  id           :integer          not null, primary key
+#  _id          :integer
+#  project_name :string
+#  project_code :string
+#  active       :boolean
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+# Indexes
+#
+#  index_projects_on_project_name  (project_name) UNIQUE
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
