--- a/test/fixtures/regions.yml
+++ b/test/fixtures/regions.yml
@@ -1,3 +1,21 @@
+# == Schema Information
+#
+# Table name: regions
+#
+#  id           :integer          not null, primary key
+#  _id          :integer
+#  region_name  :string
+#  region_code  :string
+#  region_label :string
+#  active       :boolean
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+# Indexes
+#
+#  index_regions_on_region_name  (region_name) UNIQUE
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
